...
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:text="Réunion A - "
        android:textSize="@dimen/size_text_item_meeting_layout"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@id/view_delete_meeting"
        app:layout_constraintStart_toEndOf="@+id/view_image_meeting"
        app:layout_constraintTop_toTopOf="@id/view_image_meeting"></TextView>

    <TextView
        android:id="@+id/view_start_time_meeting"
        android:layout_width="wrap_content"
...
